// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/wechat-mp/account index 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/wechat-mp/account",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/wechat-mp/account index 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/wechat-mp/account",
      },
    ],
    Array [
      Object {
        "data": Object {
          "applicationId": "appId2",
          "applicationSecret": "appSecret2",
          "env": undefined,
          "headImg": undefined,
          "nickName": undefined,
        },
        "loading": true,
        "method": "patch",
        "url": "/api/admin/wechat-mp/account",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
